# -VideooioInterview

./: .gitmodules  CMakeLists.txt
lib/ffmpeg/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/compat/: Makefile  cmake_install.cmake
lib/ffmpeg/compat/atomics/: Makefile  cmake_install.cmake
lib/ffmpeg/doc/examples/: Makefile  cmake_install.cmake
lib/ffmpeg/fftools/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/fftools/hack/: opt_common_PREPROC.c
lib/ffmpeg/include/: config.h
lib/ffmpeg/libavcodec/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libavdevice/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libavfilter/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libavformat/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libavutil/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libavutil/aarch64/: Makefile  cmake_install.cmake
lib/ffmpeg/libavutil/include/libavutil/: avconfig.h  ffversion.h
lib/ffmpeg/libavutil/ppc/: Makefile  cmake_install.cmake
lib/ffmpeg/libavutil/x86/: Makefile  cmake_install.cmake
lib/ffmpeg/libpostproc/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libswresample/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/ffmpeg/libswscale/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: Application.cpp  Application.h  Layer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  VideoDecoder.cpp  VideoDecoder.h  main.cpp  video_renderer.cpp  video_renderer.h  vipch.h
src/Encode/: video_encoder.c  video_encoder.h
src/logging/: Log.cpp  Log.h
